<resources>
    <string name="app_name">Sunny Day</string>
    <string name="health_hygiene_menu_item_text"><![CDATA[Health & Hygiene]]></string>
    <string name="period_calender_menu_item_text">Period Calendar</string>
    <string name="settings_menu_item_text">Settings</string>
    <string-array name="logs_title">
        <item>Period starts</item>
        <item>2nd Day</item>
        <item>3rd Day</item>
        <item>4th Day</item>
        <item>5th Day</item>
        <item>6th Day</item>
        <item>7th Day</item>
        <item>8th Day</item>
        <item>9th Day</item>
        <item>10th Day</item>
        <item>11th Day</item>
        <item>12th Day</item>
        <item>13th Day</item>
        <item>14th Day</item>
        <item>15th Day</item>
        <item>16th Day</item>
    </string-array>
    <string-array name="logs_title_pregnant">
        <item>1st Favourable day to conceive</item>
        <item>2nd Favourable day to conceive</item>
        <item>3rd Favourable day to conceive</item>
        <item>4th Favourable day to conceive</item>
        <item>Last Favourable day to conceive</item>
    </string-array>
    <string-array name="logs_title_symbols">
        <item>PS</item>
        <item>2D</item>
        <item>3D</item>
        <item>4D</item>
        <item>5D</item>
        <item>6D</item>
        <item>7D</item>
        <item>9D</item>
        <item>10D</item>
        <item>11D</item>
        <item>12D</item>
        <item>13D</item>
        <item>14D</item>
        <item>15D</item>
        <item>16D</item>
    </string-array>
    <string-array name="logs_title_symbols_pregnant">
        <item>1F</item>
        <item>2F</item>
        <item>3F</item>
        <item>4F</item>
        <item>LF</item>
    </string-array>
    <string-array name="logs_suggessions">
        <item>Drink a lot of water to stay hydrated!</item>
        <item>Don\'t forget to change your napkin in every 6 hours!</item>
        <item>Mood swings are natural! Try to munch on a chocolate bar, it helps!</item>
        <item>Take enough rest to keep your body energetic.</item>
        <item>Try hot bags to calm your belly cramps!</item>
        <item>Good substitutes for caffeine are ginger or herbal tea.</item>
        <item>A low-fat diet decreases levels of inflammation in the body.</item>
        <item>Don\'t forget to change your napkin in every 6 hours!</item>
        <item>Mood swings are natural! Try to munch on a chocolate bar, it helps!</item>
        <item>Take enough rest to keep your body energetic!</item>
        <item>Try hot bags to calm your belly cramps!</item>
        <item>Take enough rest to keep your body energetic!</item>
        <item>Don\'t forget to change your napkin in every 6 hours!</item>
        <item>Eat healthy and keep yourself strong.</item>
    </string-array>
    <string-array name="logs_suggessions_two">
        <item>Exercise with lighter activities.</item>
        <item>Try eating more fresh fruit and green veggies.</item>
        <item>If possible, avoid caffeine.</item>
        <item>Getting enough sleep will help you to feel rejuvenated.</item>
        <item>Find the right pantyliner or pads that provide great protection.</item>
        <item>Be sure to carry a water bottle with you.</item>
        <item>Try fish oil and Vitamin B1 for better recovery.</item>
        <item>Eat healthy and keep yourself strong.</item>
        <item>Drink a lot of water to stay hydrated!</item>
        <item>Don\'t forget to change your napkin in every 6 hours!</item>
        <item>Mood swings are natural! Try to munch on a chocolate bar, it helps!</item>
        <item>Take enough rest to keep your body energetic!</item>
        <item>Try hot bags to calm your belly cramps!</item>
        <item>Take enough rest to keep your body energetic!</item>
        <item>Don\'t forget to change your napkin in every 6 hours!</item>
        <item>Eat healthy and keep yourself strong.</item>
    </string-array>
    <string-array name="logs_suggessions_three">
        <item>Stretching, yoga, walking or swimming help minimizing cramping.</item>
        <item>Heating pad soothes your muscles, eases your body’s discomfort.</item>
        <item>Drink fluid like water, juice or milk throughout the day!</item>
        <item>Eat good-for-you foods!</item>
        <item>Try snacking on carrots, apples or blend up a smoothie.</item>
        <item>Sitting still can make you feel worse, keep moving.</item>
        <item>Massage with essential oils for pain relief.</item>
        <item>Eat healthy and keep yourself strong.</item>
        <item>Drink a lot of water to stay hydrated!</item>
        <item>Don\'t forget to change your napkin in every 6 hours!</item>
        <item>Mood swings are natural! Try to munch on a chocolate bar, it helps!</item>
        <item>Take enough rest to keep your body energetic!</item>
        <item>Try hot bags to calm your belly cramps!</item>
        <item>Take enough rest to keep your body energetic!</item>
        <item>Don\'t forget to change your napkin in every 6 hours!</item>
        <item>Eat healthy and keep yourself strong.</item>
    </string-array>
    <string-array name="logs_suggessions_four">
        <item>Fruits and veggies contain lots of water, so they keep you hydrated.</item>
        <item>Caffeine is also in sodas and chocolate. Avoid these too.</item>
        <item>You need eight to nine hours of sleep per night.</item>
        <item>Period doesn’t have to prevent you from activities you are used to.</item>
        <item>If you\'re craving chocolate, grab a small piece of dark chocolate.</item>
        <item>A spontaneous dance in your room is a great way to ease cramping.</item>
        <item>Try hugging a heating pad.</item>
        <item>Eat healthy and keep yourself strong.</item>
        <item>Drink a lot of water to stay hydrated!</item>
        <item>Don\'t forget to change your napkin in every 6 hours!</item>
        <item>Mood swings are natural! Try to munch on a chocolate bar, it helps!</item>
        <item>Take enough rest to keep your body energetic!</item>
        <item>Try hot bags to calm your belly cramps!</item>
        <item>Take enough rest to keep your body energetic!</item>
        <item>Don\'t forget to change your napkin in every 6 hours!</item>
        <item>Eat healthy and keep yourself strong.</item>
    </string-array>
    <string-array name="logs_suggessions_pregnant">
        <item>Hey! Your Ovulation has started, it\'s the lucky time!</item>
        <item>There is a chance to get pregnant, try today!</item>
        <item>You are the most fertile today, there is a high chance to get pregnant!</item>
        <item>If you haven\'t tried yet, don\'t miss the chance! It\'s still a fertile day!</item>
        <item>Last day to get pregnant on this cycle, don\'t miss it!</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_text">It seems that only fragments of the original text remain in the Lorem Ipsum texts used today. One may speculate that over the course of time certain letters were added or deleted at various positions within the text. This might also explain why one can now find slightly different versions. Due to the age of the Lorem Ipsum text there are no copyright issues to contend with.</string>
    <string name="fragment_two_set_the_date_in_the_calender"><u>Set the date in the calendar</u></string>
    <string name="settings_pregnant_mode">Pregnancy Mode</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_reset_cycle_info">Reset Cycle Info</string>
    <string name="settings_terms_and_conditions">Terms of Service</string>
    <string name="settings_license">License</string>
    <string name="settings_settings">Settings</string>
    <string name="settings_view_saved_article">View Saved Articles</string>
    <string name="fragment_one_how_can_we_help_you">How can we help you?</string>
    <string name="data_collection_fragments_steps">Steps</string>
    <string name="fragment_one_i_want_to_get_pregnant">I want to get pregnant</string>
    <string name="fragment_one_i_need_accurate_predictions_of_favourable_days_of_conception">I need accurate predictions of favourable days for conception</string>
    <string name="fragment_one_i_just_want_to_track_my_cycle">I just want to track my cycle</string>
    <string name="fragment_one_i_want_to_receive_cycle_predictios">I want to receive cycle predictions</string>
    <string name="data_collection_fragments_next">next</string>
    <string name="fragment_two_when_did_your_last_period_n_start">When did your last period  start?</string>
    <string name="fragment_three_on_avarage_how_long_is_nyour_period">On average, How long is  \nyour period?</string>
    <string name="data_collection_fragments_i_don_t_know">         I don\'t know</string>
    <string name="fragment_four_how_long_is_your_cycle">On average, How long is \nyour cycle??</string>
    <string name="fragment_five_what_year_were_you_born">What year were you born?</string>
    <string name="fragment_five_the_cycle_prediction_will_be_more_accurate_if_the_app_get_your_age">The cycle prediction will be more accurate if the app gets your age.</string>
    <string name="fragment_six_get_reminders_nabout_your_cycle">Get reminders \nabout your cycle</string>
    <string name="fragment_six_we_will_send_you_reminders_about_the_begining_of_a_new_cycle_so_that_you_dont_forget_to_long">We will send you reminders about the begining of a new cycle so that you don\'t forget to log it. You can manage the notifications from settings.</string>
    <string name="fragment_article_read_view_save_article">Save article</string>
    <string name="health_and_hygiene_title">Health and Hygiene</string>
    <string name="trending_now_title">Trending Now</string>
    <string name="what_s_in_what_s_out_title">What\'s in/What\'s out</string>
    <string name="settings_facebook">Facebook</string>
    <string name="settings_youtube">Youtube</string>
    <string name="settings_shop_now">Shop Now</string>
    <string name="helpline">Help Line</string>

</resources>
