<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_fragone"
        tools:context="com.sunny.sunnyday.DataCollectionFragments.FragmentOne">

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/stepstext_TV"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/data_collection_fragments_steps"/>
        <LinearLayout
            android:layout_below="@id/stepstext_TV"
            android:layout_width="match_parent"
            android:gravity="center"
            android:id="@+id/upperLinearLayout"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/backbutton_IV"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="11dp"
                android:src="@drawable/back_icon"
                android:tint="@android:color/white" />
            <ImageView
                android:src="@drawable/progressone"
                android:id="@+id/progressBarImage"
                android:layout_width="200dp"
                android:layout_height="51dp" />
        </LinearLayout>


        <Button
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_button_data_collection"
            android:layout_alignParentBottom="true"
            android:id="@+id/buttonNext"
            android:textColor="#AF216E"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/data_collection_fragments_next" />
        <TextView
            android:id="@+id/howcanwehelpyou_TV"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/upperLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/fragment_one_how_can_we_help_you"/>
        <RadioGroup
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:id="@+id/radiogroup"
            android:layout_below="@id/howcanwehelpyou_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonNext">
            <RadioButton
                android:layout_width="wrap_content"
                android:id="@+id/wantToPregRadioButton"
                android:layout_height="wrap_content"
                android:text="@string/fragment_one_i_want_to_get_pregnant"
                android:textStyle="bold"
                android:buttonTint="@android:color/white"
                android:textSize="14sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="41dp"
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:textColor="#eee"
                android:textSize="11sp"
                android:layout_height="wrap_content"
                android:text="@string/fragment_one_i_need_accurate_predictions_of_favourable_days_of_conception"
                />

            <RadioButton
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:id="@+id/wantToTrackCycleRadioButton"
                android:textSize="14sp"
                android:buttonTint="@android:color/white"
                android:layout_height="wrap_content"
                android:text="@string/fragment_one_i_just_want_to_track_my_cycle"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>
            <TextView
                android:textSize="11sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="41dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#eee"
                android:text="@string/fragment_one_i_want_to_receive_cycle_predictios"/>
        </RadioGroup>

    </RelativeLayout>
</layout>

